[app]: clean up main sources and runtime flows